tests/baselines/reference/elaboratedErrors.errors.txt
tests/cases/compiler/elaboratedErrors.ts(10,7): error TS2420: Class 'WorkerFS' incorrectly implements interface 'FileSystem'.
  Types of property 'read' are incompatible.
    Type 'string' is not assignable to type 'number'.


==== tests/cases/compiler/elaboratedErrors.ts (1 errors) ====
    interface FileSystem {
      read: number;
    }
    
    function fn(s: WorkerFS): void;
    function fn(s: FileSystem): void;
    function fn(s: FileSystem|WorkerFS) { }
    
    // This should issue a large error, not a small one
    class WorkerFS implements FileSystem {
          ~~~~~~~~
!!! error TS2420: Class 'WorkerFS' incorrectly implements interface 'FileSystem'.
!!! error TS2420:   Types of property 'read' are incompatible.
!!! error TS2420:     Type 'string' is not assignable to type 'number'.
      read: string;
    }
    